--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>de.freestylecrafter.aio</groupId>
-    <artifactId>AIOJetpacks</artifactId>
-    <name>AIOJetpacks</name>
+    <groupId>io.github.redwallhp</groupId>
+    <artifactId>SpacePack</artifactId>
+    <name>SpacePack</name>
     <version>1.0.0</version>
 
     <dependencies>
