--- a/plugin.yml
+++ b/plugin.yml
@@ -10,8 +10,11 @@ commands:
         aliases: [jetpack]
         description: Enable/disable your jetpack
         usage: /jp
-        permission: spacepack.command.base
+        permission: spacepack.jp
 permissions:
     spacepack.command.base:
         description: Allows you to use /jetpacks
         default: op
+    spacepack.jp:
+        description: Allows the use of the /jp toggle
+        default: true
