Implemented WorldGuard nofly regions, fixed fuel depletion message to only fire when the player doesn't have any fuel items left in their inventory.

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,7 @@
 name: SpacePack
 main: io.github.redwallhp.spacepack.AIOPlugin
 version: ${project.version}
+softdepend: [WorldGuard]
 commands:
     jetpacks:
         description: SpacePack help
